comment sample links